Fix svg alignment only in "text link inline" element

--- a/assets/scss/partials/navigation/menu/_item-content.scss
+++ b/assets/scss/partials/navigation/menu/_item-content.scss
@@ -55,8 +55,13 @@
                 position: relative;
 
                 svg {
-                    top: 0;
                     position: absolute;
+                }
+            }
+
+            .text-link-inline {
+                svg {
+                    top: 0;
                 }
             }
         }
